# python_projects

./: LICENSE  desenhar_losango_com_digitos copy.ipynb  pyproject.toml
src/desenhar_losango_com_digitos/: desenhar_losango_com_digitos.ipynb  desenhar_losango_com_digitos.md
